--- a/src/components/Snippet/Snippet.module.scss
+++ b/src/components/Snippet/Snippet.module.scss
@@ -3,6 +3,7 @@
   border: 1px solid #b3b3b3;
   padding: 10px;
   margin-top: 20px;
+  box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
 .userInfo {
