--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -6,7 +6,8 @@
   top: 0;
   left: 0;
   transform: translateX(-100%);
-  background-color: #9cc7f2;
+  // background-color: #9cc7f2;
+  background-color: #eeeeee;
   transition: 0.3s;
   box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
   &.active {
