--- a/src/pages/AccountPage/AccountPage.module.scss
+++ b/src/pages/AccountPage/AccountPage.module.scss
@@ -8,11 +8,13 @@
 
 .user {
   border-radius: 5px;
-  border: 1px solid #b3b3b3;
   padding: 10px;
   margin-top: 20px;
   box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
+  background-color: white;
+  margin-bottom: 20px;
 }
+
 .userInfo {
   display: flex;
   flex-direction: column;
@@ -36,4 +38,12 @@
 }
 
 .userStatistic {
+}
+
+.accountForms {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 50px;
+  padding-bottom: 50px;
 }
