--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -3,6 +3,7 @@
   width: 200px;
   padding: 60px 15px 0;
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   transform: translateX(-100%);
