--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -3,5 +3,5 @@
   padding: 40px 20px;
   border-radius: 8px;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  width: 240px;
+  width: 100%;
 }
