--- a/src/pages/AccountPage/AccountPage.module.scss
+++ b/src/pages/AccountPage/AccountPage.module.scss
@@ -6,44 +6,10 @@
   padding-top: 10px;
 }
 
-.user {
-  border-radius: 5px;
-  padding: 10px;
-  margin-top: 20px;
-  box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
-  background-color: white;
-  margin-bottom: 20px;
-}
-
-.userInfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.deleteBtn {
-  background-color: red;
-  color: white;
-  padding: 4px;
-  border-radius: 4px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  transition: 0.3s;
-  box-shadow: 0px -1px 2px 2px red;
-  margin-top: 10px;
-  &:hover {
-    transform: scale(1.02);
-  }
-}
-
-.userStatistic {
-}
-
 .accountForms {
   display: flex;
   align-items: start;
   justify-content: center;
   gap: 50px;
-  padding-bottom: 50px;
+  padding: 0 10px 50px;
 }
