--- a/src/components/Snippet/Snippet.module.scss
+++ b/src/components/Snippet/Snippet.module.scss
@@ -1,9 +1,9 @@
 .snippet {
   border-radius: 5px;
-  border: 1px solid #b3b3b3;
   padding: 10px;
   margin-top: 20px;
   box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
+  background: white;
 }
 
 .userInfo {
