--- a/src/pages/AccountPage/AccountPage.module.scss
+++ b/src/pages/AccountPage/AccountPage.module.scss
@@ -1,5 +1,8 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .username span {
-  color: #1b75d0;
+  color: map.get(colors.$colors, 'primary');
 }
 
 .username {
