--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -1,3 +1,6 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .burgerMenu {
   background: none;
   border: none;
@@ -22,7 +25,7 @@
 .burgerLine {
   width: 100%;
   height: 2px;
-  background-color: white;
+  background-color: map.get(colors.$colors, 'bg');
   border-radius: 2px;
   transition: 0.3s;
 }
