--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,8 +1,11 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .button {
   width: 100%;
   height: 30px;
-  background-color: #1b75d0;
-  color: white;
+  background-color: map.get(colors.$colors, 'primary');
+  color: map.get(colors.$colors, 'text');
   outline: none;
   border: none;
   border-radius: 4px;
@@ -13,6 +16,6 @@
   }
   &.disabled {
     pointer-events: none;
-    background-color: grey;
+    background-color: map.get(colors.$colors, 'bg-disabled');
   }
 }
