--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,3 +1,6 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .sidebar {
   height: 100vh;
   width: 200px;
@@ -7,28 +10,28 @@
   top: 0;
   left: 0;
   transform: translateX(-100%);
-  // background-color: #9cc7f2;
-  background-color: #eeeeee;
+  background-color: map.get(colors.$colors, 'primary');
   transition: 0.3s;
-  box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px -1px 10px 2px map.get(colors.$colors, 'shadow');
   &.active {
     transform: translatex(0);
   }
 }
 .item {
   padding: 8px 4px;
-  color: #333536;
+  color: map.get(colors.$colors, 'text');
   transition: 0.3s;
   cursor: pointer;
   margin-top: 2px;
   display: flex;
   gap: 5px;
   &:hover {
-    background-color: #93c2f2;
+    background-color: map.get(colors.$colors, 'secondary');
   }
 }
 
 .username {
+  color: map.get(colors.$colors, 'text');
   padding: 8px 0;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid map.get(colors.$colors, 'text');
 }
