--- a/src/components/Snippet/Snippet.module.scss
+++ b/src/components/Snippet/Snippet.module.scss
@@ -1,9 +1,12 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .snippet {
   border-radius: 5px;
   padding: 10px;
   margin-top: 20px;
-  box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
-  background: white;
+  box-shadow: 0px -1px 10px 2px map.get(colors.$colors, 'shadow');
+  background: map.get(colors.$colors, 'bg');
 }
 
 .userInfo {
@@ -41,7 +44,7 @@
 .iLike {
   &.active:hover,
   &.clicked {
-    color: red;
+    color: map.get(colors.$colors, 'error');
   }
 }
 .iDislike {
@@ -54,7 +57,7 @@
 .iComment {
   &.active:hover,
   &.clicked {
-    color: #1b75d0;
+    color: map.get(colors.$colors, 'primary');
   }
 }
 
@@ -68,7 +71,7 @@
 }
 
 .language {
-  color: #1b75d0;
+  color: map.get(colors.$colors, 'primary');
 }
 
 .snippetHeader {
