--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -1,9 +1,12 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .user {
   border-radius: 5px;
   padding: 10px;
   margin-top: 20px;
-  box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
-  background-color: white;
+  box-shadow: 0px -1px 10px 2px map.get(colors.$colors, 'shadow');
+  background-color: map.get(colors.$colors, 'bg');
   margin-bottom: 20px;
 }
 
@@ -14,7 +17,7 @@
 }
 
 .deleteBtn {
-  background-color: red;
+  background-color: map.get(colors.$colors, 'error');
   color: white;
   padding: 4px;
   border-radius: 4px;
@@ -22,7 +25,7 @@
   border: none;
   cursor: pointer;
   transition: 0.3s;
-  box-shadow: 0px -1px 2px 2px red;
+  box-shadow: 0px -1px 2px 2px map.get(colors.$colors, 'error');
   margin-top: 10px;
   &:hover {
     transform: scale(1.02);
