--- a/src/components/UserItem/UserItem.module.scss
+++ b/src/components/UserItem/UserItem.module.scss
@@ -1,6 +1,9 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .user {
-  background-color: white;
-  box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
+  background-color: map.get(colors.$colors, 'bg');
+  box-shadow: 0px -1px 10px 2px map.get(colors.$colors, 'shadow');
   border-radius: 4px;
   padding: 10px;
   margin: 0 auto;
@@ -9,7 +12,7 @@
   transition: 0.3s;
   width: 80%;
   &:hover {
-    box-shadow: 0px -1px 10px 2px rgba(0, 145, 255, 0.2);
+    box-shadow: 0px -1px 10px 2px map.get(colors.$colors, 'shadow-hover');
     transform: translateY(-1%);
   }
 }
