--- a/src/pages/Layout/Layout.module.scss
+++ b/src/pages/Layout/Layout.module.scss
@@ -1,9 +1,12 @@
+@use 'sass:map';
+@use '../../colors.scss' as colors;
+
 .layout {
 }
 
 .header {
-  background-color: #1b75d0;
-  color: white;
+  background-color: map.get(colors.$colors, 'primary');
+  color: map.get(colors.$colors, 'text');
   padding: 5px 0;
   height: 60px;
   width: 100vw;
@@ -11,7 +14,7 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  box-shadow: 0px -1px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px -1px 10px 2px map.get(colors.$colors, 'shadow');
 }
 
 .headerContent {
@@ -29,7 +32,7 @@
 }
 
 .logo {
-  color: white;
+  color: map.get(colors.$colors, 'text');
   font-size: 24px;
 }
 
@@ -40,11 +43,11 @@
 }
 
 .headerLink {
-  color: white;
+  color: map.get(colors.$colors, 'text');
   transition: 0.3s;
   cursor: pointer;
   &:hover {
-    color: #c0d8f7;
+    color: map.get(colors.$colors, 'secondary');
   }
 }
 
