--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -7,4 +7,13 @@
   border-radius: 8px;
   box-shadow: 0px 5px 10px 2px map.get(colors.$colors, 'shadow');
   width: 100%;
+  position: relative;
+}
+
+.error {
+  position: absolute;
+  left: 1%;
+  bottom: 1%;
+  color: map.get(colors.$colors, 'error');
+  font-size: 10px;
 }
