--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -25,8 +25,10 @@
   margin-top: 2px;
   display: flex;
   gap: 5px;
+  border-bottom: 1px solid transparent;
   &:hover {
-    background-color: map.get(colors.$colors, 'secondary');
+    border-bottom: 1px solid;
+    color: #09204b;
   }
 }
 
